@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20240425
+MANIFEST for cm_tools, version t20250106
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 CHANGES                         generated changelog
